-
Type:
Bug
-
Status: Resolved
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: Impala 1.4
-
Fix Version/s: Impala 2.2
-
Component/s: None
-
Labels:None
repro:
for i in {1..1000}; do impala-shell.sh -q "select * from functional.alltypes_datasource limit 1;" -B --quiet &> /tmp/a; done
The perm-gen memory slowly grows as reported by the /metrics debug page.
external-data-source-executor was calling JniUtil::LocalToGlobalRef
which adds global refs to a static list and thus never get GC'd.