IMPALA-1801: external-data-source-executor leaking global jni refs

external-data-source-executor was calling JniUtil::LocalToGlobalRef
which adds global refs to a static list and thus never get GC'd.

Change-Id: I40c769b8843261bec0d9c646c5c5b3a665968d12
Reviewed-on: http://gerrit.cloudera.org:8080/78
Reviewed-by: Alex Behm <alex.behm@cloudera.com>
Tested-by: Internal Jenkins